--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TestProj</title>
+  <title><%= title %></title>
   <%= csrf_meta_tag %>
   <%= page_stylesheets %>
   <%= stylesheet_link_tag :all %>
