Header 'div'isions. get it? ;]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
 
     <header id="header">
       <h1>Zipper</h1>
+
+      <div id="player">
+          player
+      </div>
+
+      <nav>
+        <a href="#">Login</a>
+        <a href="#" class='signup'>Signup</a>
+      </nav>
+
     </header>
 
     <div id="wrap">
