--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,7 +69,7 @@ button:active, .button:active { background: #DDD; }
 #player { float: left; margin-right: 250px; }
 #header > nav { float: right; line-height: 18px; width: 230px; padding: 0 20px; text-align: right; }
 #header > nav > a { color: #fff; }
-#header > nav > .signup { padding: 5px 12px; margin-left: 5px; border-radius: 14px; color: #FFF; background: #99BF46; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+#header > nav > .signup { padding: 5px 12px; margin-left: 5px; border-radius: 14px; color: #FFF; background: #1E90FF; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
 #header > nav > a:hover { text-decoration: none; }
 
 /* Content Layout */
