--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,18 +16,18 @@
       <div id="player">
           player
       </div>
-	 
-	  <nav> 
+
+	  <nav>
 		  <% if !signed_in? %>
 			<a href="#">Login</a>
 			<a href="#" class='signup'>Signup</a>
-			<% else%>  
+			<% else%>
 			<a href="#" class='signout'>Sign Out</a>
-			<% end %> 
+			<% end %>
 	  </nav>
-	  
-	  
-	 
+
+
+
 
     </header>
 
@@ -36,6 +36,8 @@
          <section id="leftRail">
             <nav>
                 <% if current_user %>
+                    <a href="#">Home</a>
+                    <a href="<%= user_path(session[:user_id]) %>">Profile</a>
                     <%= link_to "Sign Out", signout_path, :class => "nosammy" %>
                 <% else %>
                     <%= link_to_sign_in :facebook %>
