--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,14 +1,17 @@
 <header id="header">
   <h1>Zipper</h1>
-  <div>
-    <% if current_user %>
-        Logged in as: <%= current_user.name %> (<%= current_user.provider.capitalize %>)
-        <%= link_to "Sign Out", signout_path, :class => "nosammy" %>
+
+  <div id="player">
+    player
+  </div>
+
+  <nav>
+    <% if signed_in? %>
+        <%= current_user.name %> (<%= current_user.provider.capitalize %>)
+        <%= link_to "Sign Out", signout_path, :class => "signout nosammy" %>
     <% else %>
-        <%= link_to_sign_in :facebook %>
-        <%= link_to_sign_in :myspace %>
-        <%= link_to_sign_in :twitter %>
-        <%= link_to_sign_in :google %>
+        <a href="#">Login</a>
+        <a href="#" class='signup'>Signup</a>
     <% end %>
-   </div>
+  </nav>
 </header>
