reskin and re-arrange the music player, and add to header

--- a/app/views/shared/_music_player.html.erb
+++ b/app/views/shared/_music_player.html.erb
@@ -2,28 +2,24 @@
 <div class="jp-audio">
   <div class="jp-type-playlist">
     <div id="jp_container_1" class="jp-interface">
-      <ul class="jp-controls">
-        <li><a href="#" class="jp-play" tabindex="1">play</a></li>
-        <li><a href="#" class="jp-pause" tabindex="1">pause</a></li>
-        <li><a href="#" class="jp-stop" tabindex="1">stop</a></li>
-        <li><a href="#" class="jp-mute" tabindex="1">mute</a></li>
-        <li><a href="#" class="jp-unmute" tabindex="1">unmute</a></li>
-      </ul>
+      <button class="icon jp-play">4</button>
+      <button class="icon jp-pause">5</button>
+
       <div class="jp-progress">
         <div class="jp-seek-bar">
           <div class="jp-play-bar"></div>
         </div>
       </div>
+
+      <span class="jp-current-time"></span> / <span class="jp-duration"></span>
+
+      <button class="icon jp-mute">&gt;</button>
+      <button class="icon jp-unmute">&lt;</button>
+
       <div class="jp-volume-bar">
         <div class="jp-volume-bar-value"></div>
       </div>
-      <div class="jp-current-time"></div>
-      <div class="jp-duration"></div>
-    </div>
-    <div id="jp_playlist_1" class="jp-playlist">
-      <ul>
-        <li>Bubble</li>
-      </ul>
+
     </div>
   </div>
 </div>
