--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
     <!--[if lt IE 9]>
         <script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+  <%= stylesheet_link_tag "style", "pictos", "musicplayer" %>
   <%= page_stylesheets %>
-  <%= stylesheet_link_tag :all %>
 </head>
 <body>
     <%= render "layouts/header" %>
