--- a/public/handlebars/users/show.hbs
+++ b/public/handlebars/users/show.hbs
@@ -1,5 +1,11 @@
 <header>
-    <div class='actions'><button data-icon='+'>Follow</button></div>
+    <div class='actions'>
+      {{#if user/is_owner}}
+        <button data-icon="y">Settings</button>
+      {{else}}
+        <button data-icon="+">Follow</button>
+      {{/if}}
+    </div>
     <img src="{{user/image}}" />
     <h2>{{user/name}}</h2>
 </header>
