add music player queue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,8 @@
     <script type="text/javascript">
       var currentLocale = '<%= I18n.locale %>';
     </script>
-    <%= javascript_include_tag 'jquery', 'rails', 'sammy', 'sammy/sammy.handlebars', 'sammy/sammy.history_proxy','audio/jquery.jplayer', 'application' %>
+    <%= javascript_include_tag 'jquery', 'rails', 'sammy', 'sammy/sammy.handlebars', 'sammy/sammy.history_proxy',
+                               'audio/jquery.jplayer', 'audio/musicplayer', 'audio/musicplayer.queue','audio/audio', 'application' %>
     <%= page_javascripts %>
 </body>
 </html>
