--- a/app/views/shared/_music_player.html.erb
+++ b/app/views/shared/_music_player.html.erb
@@ -1,25 +1,21 @@
-<div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div class="jp-audio">
-  <div class="jp-type-playlist">
-    <div id="jp_container_1" class="jp-interface">
-      <button class="icon jp-play">4</button>
-      <button class="icon jp-pause">5</button>
+<div id="music-player" class="music-player jp-interface">
+  <button class="icon jp-prev">8</button>
+  <button class="icon jp-play">4</button>
+  <button class="icon jp-pause">5</button>
+  <button class="icon jp-next">7</button>
 
-      <div class="jp-progress">
-        <div class="jp-seek-bar">
-          <div class="jp-play-bar"></div>
-        </div>
-      </div>
-
-      <span class="jp-current-time"></span> / <span class="jp-duration"></span>
-
-      <button class="icon jp-mute">&gt;</button>
-      <button class="icon jp-unmute">&lt;</button>
-
-      <div class="jp-volume-bar">
-        <div class="jp-volume-bar-value"></div>
-      </div>
-
+  <div class="jp-progress">
+    <div class="jp-seek-bar">
+      <div class="jp-play-bar"></div>
     </div>
+  </div>
+
+  <span class="jp-current-time"></span> | <span class="jp-duration"></span>
+
+  <button class="icon jp-mute">&gt;</button>
+  <button class="icon jp-unmute">&lt;</button>
+
+  <div class="jp-volume-bar">
+    <div class="jp-volume-bar-value"></div>
   </div>
 </div>
