--- a/public/handlebars/playlists/show.hbs
+++ b/public/handlebars/playlists/show.hbs
@@ -1,3 +1,8 @@
 <header>
     <h2>{{playlist/name}}</h2>
+		<div class="actions">
+			<button data-icon="9">Play</button>
+			<button data-icon="+">Add Song</button>
+			<button data-icon="y">Settings</button>
+		</div>
 </header>
