modifying respond_with for profile. title changes.

--- a/public/handlebars/users/show.hbs
+++ b/public/handlebars/users/show.hbs
@@ -9,3 +9,8 @@
     <img src="{{user/image}}" />
     <h2>{{user/name}}</h2>
 </header>
+<ul class="playlists">
+  {{#each user/playlists}}
+    <li><a href="#">{{this/name}}</a></li>
+  {{/each}}
+</ul>
