--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,6 +118,7 @@ button:active, .button:active { background: #DDD; }
 .playlists > li { padding: 10px; border-top: 1px solid #ddd; font-size: 12px; font-weight: bold; cursor: pointer; list-style: decimal-leading-zero; list-style-position: inside; }
 .playlists > li:first-child { border: none; }
 .playlists > li:hover { background: #F6F6F6; }
+.playlists > li > a { color: #333; }
 
 /* Nav  */
 #leftRail a { display: block; padding: 10px; border-top: 1px solid #DDD; color: #777; font-weight: bold; }
