PlaylistsHelper: playlist_url, + modifications to users_controller to get URL for each playlist + show url in view.

--- a/public/handlebars/users/show.hbs
+++ b/public/handlebars/users/show.hbs
@@ -11,6 +11,6 @@
 </header>
 <ul class="playlists">
   {{#each user/playlists}}
-    <li><a href="#">{{this/name}}</a></li>
+    <li><a href="{{this/url}}">{{this/name}}</a></li>
   {{/each}}
 </ul>
