--- a/app/views/shared/_music_player.html.erb
+++ b/app/views/shared/_music_player.html.erb
@@ -1,21 +1,15 @@
-<div id="music-player" class="music-player jp-interface">
+<div id="music-player" class="music-player">
   <button class="icon jp-prev">8</button>
   <button class="icon jp-play">4</button>
   <button class="icon jp-pause">5</button>
   <button class="icon jp-next">7</button>
 
-  <div class="jp-progress">
-    <div class="jp-seek-bar">
-      <div class="jp-play-bar"></div>
-    </div>
-  </div>
+  <div class="progress"></div>
 
   <span class="jp-current-time"></span> | <span class="jp-duration"></span>
 
   <button class="icon jp-mute">&gt;</button>
   <button class="icon jp-unmute">&lt;</button>
 
-  <div class="jp-volume-bar">
-    <div class="jp-volume-bar-value"></div>
-  </div>
+  <div class="volume"></div>
 </div>
