Minor playlist index change

--- a/public/handlebars/playlists/index.hbs
+++ b/public/handlebars/playlists/index.hbs
@@ -1,3 +1,6 @@
 <header>
-    Playlists are here
+		My Playlists
+    <div class='actions'>
+        <button data-icon="+">Add Playlist</button>
+    </div>
 </header>
