adding $.comm and the ability to change pages with $.comm.send('location.href',url)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
     <%= javascript_include_tag 'rails',
                                'sammy/sammy', 'sammy/sammy.handlebars', 'sammy/sammy.history_proxy',
                                'audio/jquery.jplayer', 'audio/musicplayer', 'audio/musicplayer.queue','audio/audio',
-                               'application' %>
+                               'comm', 'application' %>
 
     <script type="text/javascript">
         // this is placed before page-specific javascripts but after the main layout, because only page-specific javascripts should be collected
