Changes to style to support anchor.button, user edit page link from profile (as owner)

--- a/public/handlebars/users/show.hbs
+++ b/public/handlebars/users/show.hbs
@@ -1,7 +1,7 @@
 <header>
     <div class='actions'>
       {{#if user/is_owner}}
-        <button data-icon="y">Settings</button>
+        <a href="/users/{{user/id}}/edit" class='button' data-icon="y">Settings</a>
       {{else}}
         <button data-icon="+">Follow</button>
       {{/if}}
