--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,8 @@ strong { font-weight: bold; }
 .hide { display: none; }
 
 body { background: #555; color: #444; font-family: Helvetica,Arial,sans-serif; font-size: 11px;  }
-button:before { content: attr(data-icon); font: 12px/0 'Pictos'; margin-right: 3px; }
+button:before,
+.button:before { content: attr(data-icon); font: 12px/0 'Pictos'; margin-right: 3px; }
 a { color: #0077CC; text-decoration: none; }
 a:hover { color: #333; text-decoration: underline; }
 p { color: #666; line-height: 14px; }
@@ -60,7 +61,7 @@ form > div > label { cursor: pointer; display: block; margin-bottom: 5px; font-w
 button, .button { cursor: pointer; padding: 4px 6px; background: #CCC; font-size: 11px; font-weight: bold; color: #444; border: 1px solid #AAA; border-bottom-color: #777; box-shadow: 0 1px 2px rgba(0,0,0,0.1); border-radius: 2px;
 	background: -moz-linear-gradient(#FFF, #E8E8E8); background: -webkit-linear-gradient(#FFF, #E8E8E8); }
 .button { display: inline-block; height: 14px; padding: 4px 9px; line-height: 14px; text-align: center; }
-button:hover, .button:hover { background: #FFF; background: -moz-linear-gradient(#FFF, #DDD); background: -webkit-linear-gradient(#FFF, #DDD); }
+button:hover, .button:hover { background: #FFF; background: -moz-linear-gradient(#FFF, #DDD); background: -webkit-linear-gradient(#FFF, #DDD); text-decoration: none; }
 button:active, .button:active { background: #DDD; }
 .primary { background: #7DAA29; border-color: #54770E; color: #fff;
 	background: -moz-linear-gradient(#8DC427, #7DAA29); background: -webkit-linear-gradient(#8DC427, #7DAA29); }
