--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,8 @@
                 <% if current_user %>
                     <%= link_to "Home", root_path %>
                     <%= link_to "Profile", user_path(current_user) %>
-										<%= link_to "Add Playlist", new_playlist_path %>
+					<%= link_to "Add Playlist", new_playlist_path %>
                     <%= link_to "Sign Out", signout_path, :class => "nosammy" %>
-                <% else %>
-                    <%= link_to_sign_in :facebook %>
-                    <%= link_to_sign_in :myspace %>
-                    <%= link_to_sign_in :twitter %>
-                    <%= link_to_sign_in :google %>
                 <% end %>
             </nav>
         </section>
@@ -42,16 +37,18 @@
          </section>
     </div>
 
+    <%= render 'shared/login_dialog' %>
 
     <%= javascript_include_translations %>
     <script type="text/javascript">
       var currentLocale = '<%= I18n.locale %>';
     </script>
-    <%= javascript_include_tag 'jquery/jquery', 'jquery/jquery.ui.core', 'jquery/jquery.ui.widget', 'jquery/jquery.ui.mouse', 'jquery/jquery.ui.slider' %>
+    <%= javascript_include_tag 'jquery/jquery', 'jquery/jquery.ui.core', 'jquery/jquery.ui.widget', 'jquery/jquery.ui.mouse',
+                               'jquery/jquery.ui.position', 'jquery/jquery.ui.dialog', 'jquery/jquery.ui.slider' %>
     <%= javascript_include_tag 'rails',
                                'sammy/sammy', 'sammy/sammy.handlebars', 'sammy/sammy.history_proxy',
-                               'audio/jquery.jplayer', 'audio/musicplayer', 'audio/musicplayer.queue','audio/audio',
-                               'comm', 'application' %>
+                               'audio/jquery.jplayer', 'audio/musicplayer', 'audio/musicplayer.queue',
+                               'comm', 'login', 'application' %>
 
     <script type="text/javascript">
         // this is placed before page-specific javascripts but after the main layout, because only page-specific javascripts should be collected
