--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ button[disabled] { cursor: default; background: #DDD; color: #999; }
 	background: -moz-linear-gradient(#8DC427, #7DAA29); background: -webkit-linear-gradient(#8DC427, #7DAA29); }
 
 /* Grid */
-.grid { margin-right: -10px; }
+.grid { margin: -10px -10px 0 0; }
 .grid > li { float: left; margin: 10px 10px 0 0; }
 
 /* Header */
@@ -86,12 +86,13 @@ button[disabled] { cursor: default; background: #DDD; color: #999; }
 #wrap { margin: 48px 10px 10px; background: #fff; border-radius: 6px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.8); }
 #leftRail { float: left; width: 150px; border-right: 1px solid #DDD; }
 #main { /* temp*/ min-height: 400px; /* temp */  margin-left: 150px; border-left: 1px solid #DDD; }
+#content { margin-right: 250px; }
 #rightRail { float: right; width: 250px; border-left: 1px solid #DDD; }
 
 /* Modules */
-.module { padding: 15px; }
-.module + .module { padding-top: 0px; }
-.module > h3 { margin-bottom: 15px; font-size: 14px; font-weight: normal; }
+.module { overflow: auto; padding: 15px; }
+.module + .module { padding-top: 5px; }
+.module > h3 { margin-bottom: 10px; font-size: 14px; font-weight: normal; }
 
 /* Article Header */
 #main > header { min-height: 50px; padding: 15px; border-bottom: 1px solid #DDD; }
