--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
     </div>
 
     <%= render 'shared/login_dialog' %>
+    <%= render 'shared/new_user_dialog' %>
 
     <%= javascript_include_translations %>
     <script type="text/javascript">
@@ -38,11 +39,12 @@
     </script>
 
     <%= javascript_include_tag 'jquery/jquery', 'jquery/jquery.ui.core', 'jquery/jquery.ui.widget', 'jquery/jquery.ui.mouse',
-      'jquery/jquery.ui.position', 'jquery/jquery.ui.dialog', 'jquery/jquery.ui.slider' %>
-    <%= javascript_include_tag 'rails',
+      'jquery/jquery.ui.position', 'jquery/jquery.ui.dialog', 'jquery/jquery.ui.slider',
+      'rails',
       'sammy/sammy', 'sammy/sammy.handlebars', 'sammy/sammy.history_proxy',
       'audio/jquery.jplayer', 'audio/musicplayer', 'audio/musicplayer.queue',
-      'comm', 'login', 'application' %>
+      'comm', 'login', 'new_user', 'application'
+    %>
 
     <script type="text/javascript">
       // this is placed before page-specific javascripts but after the main layout, because only page-specific javascripts should be collected
