Fix playlist create js and form

--- a/app/views/shared/_new_user_dialog.html.erb
+++ b/app/views/shared/_new_user_dialog.html.erb
@@ -1,4 +1,4 @@
-<div id="new-user-dialog" style="display:none;">
+<div id="new-user-dialog" class="dialog">
   <form id="new-user" action="/users" method="post">
     <div>
       <label for="username">Username:</label>
