--- a/app/views/shared/_login_dialog.html.erb
+++ b/app/views/shared/_login_dialog.html.erb
@@ -1,6 +1,8 @@
-<div id="login-dialog" style="display:none;">
-    <%= link_to_sign_in :facebook %>
-    <%= link_to_sign_in :myspace %>
-    <%= link_to_sign_in :twitter %>
-    <%= link_to_sign_in :google %>
+<div id="login-dialog" class="dialog">
+  <ul>
+    <li><%= link_to_sign_in :facebook %></li>
+    <li><%= link_to_sign_in :myspace %></li>
+    <li><%= link_to_sign_in :twitter %></li>
+    <li><%= link_to_sign_in :google %></li>
+  </ul>
 </div>
