--- a/public/handlebars/playlists/playlistform.hbs
+++ b/public/handlebars/playlists/playlistform.hbs
@@ -1,5 +1,5 @@
 <h1>{{form/header}}</h1>
-<form id="playlist" action="/playlists/create" method="post">
+<form id="playlist" action="/playlists" method="post">
 	<ul>
 		<li><label for="name"></label></li>
 		<li><input type="text" name="name"  autofocus maxlength="100" /></li>
